--- a/servicios/templates/empleados/activar.html
+++ b/servicios/templates/empleados/activar.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Listado de empleados</title>
+    <title></title>
   </head>
   <body>
     <header></header>
@@ -11,4 +11,3 @@
     <footer></footer>
   </body>
 </html>
-
