--- a/servicios/templates/empleados/listado.html
+++ b/servicios/templates/empleados/listado.html
@@ -3,12 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Listado de empleados</title>
+    <title></title>
   </head>
   <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    
   </body>
 </html>
-
