--- a/servicios/templates/coordinadores/actualizar.html
+++ b/servicios/templates/coordinadores/actualizar.html
@@ -3,11 +3,38 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+    <title>Actualizar coordinador</title>
   </head>
   <body>
-    <header></header>
-    <main></main>
+    <main class="container p-4">
+      <h3 class="pb-3 d-flex justify-content-center fw-bold text-body-tertiary">Actualizar Coordinador</h3>
+      <div class="d-flex justify-content-center p-5 bg-warning bg-opacity-75 rounded-5">
+
+        <form method="post"><!-- El metodo post envia informacion a travez de un formulario -->
+            {% csrf_token %} <!-- Token que genera Django -->
+
+            <div class="form-group">
+              <label class="fw-semibold">Nombre:</label>
+              <input type="text" name="nombre" maxlength="20" class="mb-3 form-control" value="{{coordinador.nombre}}">
+
+              <label class="fw-semibold">Apellido:</label>
+              <input type="text" name="apellido" maxlength="20" class="mb-3 form-control" value="{{coordinador.apellido}}">
+
+              <label class="fw-semibold">DNI:</label>
+              <input type="number" maxlength="10" name="numero_documento" class="mb-3 form-control" value="{{coordinador.numero_documento}}">
+
+              <label class="fw-semibold">Fecha de alta:</label>
+              <input type="date" name="fecha_alta" class="mb-3 form-control" value="{{coordinador.fecha_alta}}">
+              </div>
+
+              <div class="d-flex justify-content-center pt-5">
+                <input type="submit" class="btn btn-primary bg-gradient fw-bold" value="Actualizar coordinador">
+              </div>
+            </div>
+
+          </form>
+    </div>
+    </main>
     <footer></footer>
   </body>
 </html>
