agregando el formulario para cargar un nuevo coordinador

--- a/servicios/templates/coordinadores/registrar.html
+++ b/servicios/templates/coordinadores/registrar.html
@@ -3,11 +3,31 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+    <title>Registrar coordinadores</title>
   </head>
   <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
-  </body>
+
+    <form method="post">
+        {% csrf_token %}
+
+        Nombre: <input type="text" name="nombre">
+        <br><br>
+        Apellido: <input type="text" name="apellido">
+        <br><br>
+        N° Documento: <input type="number" name="numero_documento">
+        <br><br>
+        Fecha De Alta: <input type="date" name="fecha_alta">
+        <br><br>
+
+        <input type="submit" value="Guardar registro">
+
+    </form>
+
+    <br><br>
+
+    <a href="">
+        Ir al Listado
+    </a>
+
+</body>
 </html>
