Linkeadas todas las funcionalidades del modulo de clientes

--- a/servicios/templates/clientes/actualizar.html
+++ b/servicios/templates/clientes/actualizar.html
@@ -8,6 +8,9 @@
   <body>
     <header></header>
     <main></main>
+    <a href="{% url 'listar_clientes' %}">
+      Ir al Listado de Clientes
+    </a>
     <footer></footer>
   </body>
 </html>
