--- a/servicios/templates/clientes/actualizar.html
+++ b/servicios/templates/clientes/actualizar.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="text-center fw-bold mb-3">Actualizar empleado</h1>
+      <h1 class="text-center fw-bold mb-3">Actualizar Cliente</h1>
       <div class="d-flex justify-content-center">
 
         <form method="post" action="{% url 'actualizar_cliente' cliente.id %}">
