--- a/servicios/templates/index.html
+++ b/servicios/templates/index.html
@@ -1,9 +1,61 @@
+{% load static %}
+
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-    <title>{{ title }}</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link  rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <title>{% block titulo %} Inicio {% endblock %}</title>
 </head>
 <body>
-    <h1>{{ message }}</h1>
+    <!-- Encabezado y menu -->
+    <header class="p-3 bg-dark">
+        <div class="container">
+            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+
+              <a href="{% url 'index' %}" class="nav-link fw-bold text-white ps-5 fs-4">Inicio</a>
+              
+              <div class="ps-5">
+                <span class="fw-bold text-white fs-4" type="button" aria-expanded="false">
+                  <a href="" class="nav-link">Servicios</a>
+                </span>
+              </div>
+
+              <div class="ps-5">
+                <span class="fw-bold text-white fs-4" type="button" aria-expanded="false">
+                  <a href="" class="nav-link">Reservas</a>
+                </span>
+              </div>
+              
+              <div class="ps-5">
+                <span class="fw-bold text-white fs-4" type="button" aria-expanded="false">
+                  <a href="{% url 'listar_clientes' %}" class="nav-link">Clientes</a>
+                </span>
+              </div>
+              
+              <div class="ps-5">
+                <span class="fw-bold text-white fs-4" type="button" aria-expanded="false">
+                  <a href="{% url 'listar_empleados' %}" class="nav-link">Empleados</a>
+                </span>
+              </div>
+              
+              <div class="ps-5">
+                <span class="fw-bold text-white fs-4" type="button" aria-expanded="false">
+                  <a href="{% url 'listar_coordinadores' %}" class="nav-link">Coordinadores</a>
+                </span>
+              </div>
+
+            </div>
+            
+        </div>
+    </header>
+
+    <!-- Contenido principal -->
+    <main class="container p-4">
+        {% block contenido_principal %}
+        {% endblock %}
+    </main>
 </body>
 </html>
