--- a/servicios/templates/coordinadores/listado.html
+++ b/servicios/templates/coordinadores/listado.html
@@ -45,13 +45,20 @@
                                 -------------
                             {% endif %}
                         </td>
+                        <!-- Eliminar registro -->
+                        <td>
+                            <form action="{% url 'eliminar_coordinador' coordinador.id %}" method="POST">
+                                {% csrf_token %}
+                                <button class="btn btn-danger bg-gradient fw-bold">Eliminar</button>
+                            </form>
+                        </td>
                     </tr>
                 {% endfor %}
             </tbody>
         </table>
 
         <div class="d-flex justify-content-center p-5">
-            <a href="{% url 'nuevo_coordinador' %}" class="btn btn-success bg-gradient fw-bold">Agregar coordinador</a>
+            <a href="{% url 'registrar_coordinador' %}" class="btn btn-success bg-gradient fw-bold">Agregar coordinador</a>
         </div>
     </main>
     <footer></footer>
