--- a/servicios/templates/empleados/eliminar.html
+++ b/servicios/templates/empleados/eliminar.html
@@ -1,13 +1,9 @@
-<!DOCTYPE html>
-<html lang="es">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
-  </head>
-  <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
-  </body>
-</html>
+{% extends "index.html" %}
+
+{% block titulo %} Eliminar Coordinador {% endblock %}
+
+
+
+{% block contenido_principal %}
+  AQUI VA EL CODIGO HTML
+{% endblock %}
