--- a/servicios/templates/coordinadores/actualizar.html
+++ b/servicios/templates/coordinadores/actualizar.html
@@ -1,17 +1,13 @@
-<!DOCTYPE html>
-<html lang="es">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Actualizar coordinador</title>
-  </head>
-  <body>
-    <main class="container p-4">
-      <h3 class="pb-3 d-flex justify-content-center fw-bold text-body-tertiary">Actualizar Coordinador</h3>
+{% extends "index.html" %}
+
+{% block titulo %} Actualizar Coordinador {% endblock %}
+
+{% block contenido_principal %}
+<h3 class="pb-3 d-flex justify-content-center fw-bold text-body-tertiary">Actualizar Coordinador</h3>
       <div class="d-flex justify-content-center p-5 bg-warning bg-opacity-75 rounded-5">
 
-        <form method="post"><!-- El metodo post envia informacion a travez de un formulario -->
-            {% csrf_token %} <!-- Token que genera Django -->
+        <form method="post">
+            {% csrf_token %}
 
             <div class="form-group">
               <label class="fw-semibold">Nombre:</label>
@@ -28,13 +24,10 @@
               </div>
 
               <div class="d-flex justify-content-center pt-5">
-                <input type="submit" class="btn btn-primary bg-gradient fw-bold" value="Actualizar coordinador">
+                <input type="submit" class="btn btn-primary bg-gradient fw-bold" value="Actualizar">
               </div>
             </div>
 
           </form>
     </div>
-    </main>
-    <footer></footer>
-  </body>
-</html>
+{% endblock %}
