--- a/servicios/templates/empleados/registrar.html
+++ b/servicios/templates/empleados/registrar.html
@@ -1,32 +1,27 @@
-<!DOCTYPE html>
-<html lang="es">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Registrar empleados</title>
-  </head>
-  <body>
+{% extends "index.html" %}
 
-    <form method="post">
-        {% csrf_token %}
+{% block titulo %} Nuevo Empleado {% endblock %}
 
-        Nombre: <input type="text" name="nombre">
-        <br><br>
-        Apellido: <input type="text" name="apellido">
-        <br><br>
-        N° Legajo <input type="number" name="legajo">
-        <br><br>
 
-        <input type="submit" value="Guardar registro">
 
-    </form>
+{% block contenido_principal %}
+<form method="post">
+    {% csrf_token %}
 
+    Nombre: <input type="text" name="nombre">
+    <br><br>
+    Apellido: <input type="text" name="apellido">
+    <br><br>
+    N° Legajo <input type="number" name="legajo">
     <br><br>
 
-    <a href="">
-        Ir al Listado
-    </a>
+    <input type="submit" value="Guardar registro">
 
-</body>
-</html>
+</form>
 
+<br><br>
+
+<a href="{% url 'listar_empleados' %}">
+    Ir al Listado
+</a>
+{% endblock %}
