agrega Eliminar a la columna

--- a/servicios/templates/coordinadores/listado.html
+++ b/servicios/templates/coordinadores/listado.html
@@ -17,6 +17,7 @@
                     <th scope="col">Fecha de alta</th>
                     <th scope="col">Estado</th>
                     <th scope="col">Actualizar</th>
+                    <th scope="col">Eliminar</th>
                 </tr>
             </thead>
             <tbody>
