--- a/servicios/templates/servicios/registrar.html
+++ b/servicios/templates/servicios/registrar.html
@@ -34,6 +34,6 @@
     </div>
 
     <div>
-      <a href="#">Lista de servicios</a>
+      <a href="{%url 'listar_servicios'%}">Volver al listado</a>
     </div>
 {% endblock %}
