--- a/servicios/templates/servicios/actualizar.html
+++ b/servicios/templates/servicios/actualizar.html
@@ -20,7 +20,7 @@
           </div>
           
           <label>Precio:</label>
-          <input type="number" step="any" name="precio" value="{{servicio.precio}}">
+          <input type="number" name="precio" value="{{servicio.precio}}">
 
           <div>
             <input type="submit" value="Actualizar">
