--- a/servicios/templates/servicios/listado.html
+++ b/servicios/templates/servicios/listado.html
@@ -1,7 +1,9 @@
+{% extends "index.html" %}
+
 {% block titulo %} Listado de servicios {% endblock %}
 
 
-{% block content %}
+{% block contenido_principal %}
   <h1>Listado de servicios</h1>
   <table>
     <thead>
