--- a/servicios/templates/index.html
+++ b/servicios/templates/index.html
@@ -19,13 +19,13 @@
               
               <div class="ps-5">
                 <span class="fw-bold text-white fs-4" type="button" aria-expanded="false">
-                  <a href="" class="nav-link">Servicios</a>
+                  <a href="{% url 'listar_servicios' %}" class="nav-link">Servicios</a>
                 </span>
               </div>
 
               <div class="ps-5">
                 <span class="fw-bold text-white fs-4" type="button" aria-expanded="false">
-                  <a href="" class="nav-link">Reservas</a>
+                  <a href="{% url 'listar_reservas' %}" class="nav-link">Reservas</a>
                 </span>
               </div>
               
