añadido tipo number a servicios/templates/actualizar

--- a/servicios/templates/servicios/actualizar.html
+++ b/servicios/templates/servicios/actualizar.html
@@ -20,7 +20,7 @@
           </div>
           
           <label>Precio:</label>
-          <input name="precio" value="{{servicio.precio}}">
+          <input name="precio" type="number" value="{{servicio.precio}}" >
 
           <div>
             <input type="submit" value="Actualizar">
