--- a/servicios/templates/empleados/listado.html
+++ b/servicios/templates/empleados/listado.html
@@ -11,7 +11,7 @@
       <div class="busqueda"></div>
       <a class="boton" href="{% url 'registrar_empleado' %}">Añadir</a>
     </div>
-    <div class="caja">
+    <div class="caja margen-abajo">
       <table class="tabla">
           <tr>
               <th>Id</th>
