--- a/servicios/templates/empleados/registrar.html
+++ b/servicios/templates/empleados/registrar.html
@@ -2,18 +2,21 @@
 
 {% block titulo %} Nuevo Empleado {% endblock %}
 
-
-
 {% block contenido_principal %}
+{%if creado%}
+    <div class="toast-exito">Creado con exito</div>
+{%endif%}
+{%if fallo%}
+    <div class="toast-fallo">Ocurrió un error al crear el registro</div>
+{%endif%}
 <div class="contenido">
     <h1 class="titulo">Registrar Empleado</h1>
-    <div></div>
     <form method="post" class="formulario">
         {% csrf_token %}
         <div class="contenedor-campos">
             <div class="campo-formulario">
                 <label for="nombre">Nombre:</label>
-                <input type="text" name="nombre" id="nombre" placeholder="Ingrese nombre">
+                <input type="text" name="nombre" id="nombre" placeholder="Ingrese nombre" required>
             </div>
             <div class="campo-formulario">
                 <label>Apellido:</label>
@@ -21,7 +24,7 @@
             </div>
             <div class="campo-formulario">
                 <label>N° Legajo:</label>
-                <input type="number" name="legajo" placeholder="xxxxxxxx">
+                <input type="number" name="legajo" placeholder="xxxxxxxx" required>
             </div>
             
             <input class="boton" type="submit" value="Guardar registro">
