--- a/servicios/templates/index.html
+++ b/servicios/templates/index.html
@@ -99,46 +99,46 @@
         <div class="contenido">
           <h1 class="titulo">Dashboard</h1>
           <div class="resumen">
-            <div class="caja caja-dashboard">
+            <a class="caja caja-dashboard" href="{%url 'listar_servicios'%}">
               <p>
                   <svg width="21" height="24" viewBox="0 0 21 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M7.81348 3.225L9.24082 6H9.1875H6.23438C5.32793 6 4.59375 5.16094 4.59375 4.125C4.59375 3.08906 5.32793 2.25 6.23438 2.25H6.32461C6.93574 2.25 7.50586 2.62031 7.81348 3.225ZM2.625 4.125C2.625 4.8 2.76855 5.4375 3.01875 6H1.3125C0.586523 6 0 6.67031 0 7.5V10.5C0 11.3297 0.586523 12 1.3125 12H19.6875C20.4135 12 21 11.3297 21 10.5V7.5C21 6.67031 20.4135 6 19.6875 6H17.9812C18.2314 5.4375 18.375 4.8 18.375 4.125C18.375 1.84688 16.759 0 14.7656 0H14.6754C13.367 0 12.1529 0.792188 11.4885 2.08125L10.5 4.00781L9.51152 2.08594C8.84707 0.792187 7.63301 0 6.32461 0H6.23438C4.24102 0 2.625 1.84688 2.625 4.125ZM16.4062 4.125C16.4062 5.16094 15.6721 6 14.7656 6H11.8125H11.7592L13.1865 3.225C13.4982 2.62031 14.0643 2.25 14.6754 2.25H14.7656C15.6721 2.25 16.4062 3.08906 16.4062 4.125ZM1.3125 13.5V21.75C1.3125 22.9922 2.19434 24 3.28125 24H9.1875V13.5H1.3125ZM11.8125 24H17.7188C18.8057 24 19.6875 22.9922 19.6875 21.75V13.5H11.8125V24Z" fill="#C2C0FF"/>
                   </svg>
                   <span class="font-fuerte" style="font-size:22px;margin-left:8px;">{{servicios}}</span></p>
               <p class="font-16">Servicios</p>
-            </div>
-            <div class="caja caja-dashboard">
+              </a>
+              <a class="caja caja-dashboard" href="{%url 'listar_clientes'%}">
               <p>
                 <svg width="21" height="24" viewBox="0 0 21 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M10.5 12C12.0913 12 13.6174 11.3679 14.7426 10.2426C15.8679 9.11742 16.5 7.5913 16.5 6C16.5 4.4087 15.8679 2.88258 14.7426 1.75736C13.6174 0.632141 12.0913 0 10.5 0C8.9087 0 7.38258 0.632141 6.25736 1.75736C5.13214 2.88258 4.5 4.4087 4.5 6C4.5 7.5913 5.13214 9.11742 6.25736 10.2426C7.38258 11.3679 8.9087 12 10.5 12ZM8.35781 14.25C3.74063 14.25 0 17.9906 0 22.6078C0 23.3766 0.623438 24 1.39219 24H19.6078C20.3766 24 21 23.3766 21 22.6078C21 17.9906 17.2594 14.25 12.6422 14.25H8.35781Z" fill="#C2C0FF"/>
                   </svg>   
                   <span class="font-fuerte" style="font-size:22px;margin-left:8px;">{{clientes}}</span></p>
               <p class="font-16">Clientes</p>
-            </div>
-            <div class="caja caja-dashboard">
+              </a>
+              <a class="caja caja-dashboard" href="{%url 'listar_empleados'%}">
               <p>
                 <svg width="21" height="24" viewBox="0 0 21 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M10.5 12C8.9087 12 7.38258 11.3679 6.25736 10.2426C5.13214 9.11742 4.5 7.5913 4.5 6C4.5 4.4087 5.13214 2.88258 6.25736 1.75736C7.38258 0.632141 8.9087 0 10.5 0C12.0913 0 13.6174 0.632141 14.7426 1.75736C15.8679 2.88258 16.5 4.4087 16.5 6C16.5 7.5913 15.8679 9.11742 14.7426 10.2426C13.6174 11.3679 12.0913 12 10.5 12ZM9.80156 16.8375L8.92969 15.3844C8.62969 14.8828 8.99062 14.25 9.57187 14.25H10.5H11.4234C12.0047 14.25 12.3656 14.8875 12.0656 15.3844L11.1938 16.8375L12.7594 22.6453L14.4469 15.7594C14.5406 15.3797 14.9062 15.1312 15.2859 15.2297C18.5719 16.0547 21 19.0266 21 22.5609C21 23.3578 20.3531 24 19.5609 24H13.3828C13.2844 24 13.1953 23.9812 13.1109 23.9484L13.125 24H7.875L7.88906 23.9484C7.80469 23.9812 7.71094 24 7.61719 24H1.43906C0.646875 24 0 23.3531 0 22.5609C0 19.0219 2.43281 16.05 5.71406 15.2297C6.09375 15.1359 6.45938 15.3844 6.55313 15.7594L8.24063 22.6453L9.80625 16.8375H9.80156Z" fill="#C2C0FF"/>
                   </svg>    
                   <span class="font-fuerte" style="font-size:22px;margin-left:8px;">{{empleados}}</span></p>
               <p class="font-16">Empleados</p>
-            </div>
-            <div class="caja caja-dashboard">
+              </a>
+              <a class="caja caja-dashboard" href="{%url 'listar_coordinadores'%}">
               <p>
                 <svg width="30" height="24" viewBox="0 0 30 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M7.5 3C7.5 1.34531 8.84531 0 10.5 0H27C28.6547 0 30 1.34531 30 3V16.5C30 18.1547 28.6547 19.5 27 19.5H15.7875C15.2344 18.3047 14.3859 17.2734 13.3312 16.5H18V15C18 14.1703 18.6703 13.5 19.5 13.5H22.5C23.3297 13.5 24 14.1703 24 15V16.5H27V3H10.5V5.30156C9.61875 4.79063 8.59219 4.5 7.5 4.5V3ZM7.5 6C8.09095 6 8.67611 6.1164 9.22208 6.34254C9.76804 6.56869 10.2641 6.90016 10.682 7.31802C11.0998 7.73588 11.4313 8.23196 11.6575 8.77792C11.8836 9.32389 12 9.90905 12 10.5C12 11.0909 11.8836 11.6761 11.6575 12.2221C11.4313 12.768 11.0998 13.2641 10.682 13.682C10.2641 14.0998 9.76804 14.4313 9.22208 14.6575C8.67611 14.8836 8.09095 15 7.5 15C6.90905 15 6.32389 14.8836 5.77792 14.6575C5.23196 14.4313 4.73588 14.0998 4.31802 13.682C3.90016 13.2641 3.56869 12.768 3.34254 12.2221C3.1164 11.6761 3 11.0909 3 10.5C3 9.90905 3.1164 9.32389 3.34254 8.77792C3.56869 8.23196 3.90016 7.73588 4.31802 7.31802C4.73588 6.90016 5.23196 6.56869 5.77792 6.34254C6.32389 6.1164 6.90905 6 7.5 6ZM6.24844 16.5H8.74688C12.2016 16.5 15 19.2984 15 22.7484C15 23.4375 14.4422 24 13.7484 24H1.25156C0.557813 24 0 23.4422 0 22.7484C0 19.2984 2.79844 16.5 6.24844 16.5Z" fill="#C2C0FF"/>
                   </svg>  
                   <span class="font-fuerte" style="font-size:22px;margin-left:8px;">{{coordinadores}}</span></p>
               <p class="font-16">Coordinadores</p>
-            </div>
-            <div class="caja caja-dashboard">
+              </a>
+              <a class="caja caja-dashboard" href="{%url 'listar_reservas'%}">
               <p>
                 <svg width="21" height="24" viewBox="0 0 21 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M4.5 1.5V3H2.25C1.00781 3 0 4.00781 0 5.25V7.5H21V5.25C21 4.00781 19.9922 3 18.75 3H16.5V1.5C16.5 0.670312 15.8297 0 15 0C14.1703 0 13.5 0.670312 13.5 1.5V3H7.5V1.5C7.5 0.670312 6.82969 0 6 0C5.17031 0 4.5 0.670312 4.5 1.5ZM21 9H0V21.75C0 22.9922 1.00781 24 2.25 24H18.75C19.9922 24 21 22.9922 21 21.75V9Z" fill="#C2C0FF"/>
                   </svg>   
                   <span class="font-fuerte" style="font-size:22px;margin-left:8px;">{{reservas}}</span></p>
               <p class="font-16">Reservas</p>
-            </div>
+              </a>
           </div>
           <div class="destacados">
             <div class="caja tabla-ultimos-movimientos">
