--- a/servicios/templates/reservas/registrar.html
+++ b/servicios/templates/reservas/registrar.html
@@ -3,67 +3,77 @@
 {% block titulo %} Registrar Reserva {% endblock %}
 
 {% block contenido_principal %}
-<div>
-    <form method="post">
+<div class="contenido">
+    <h1 class="titulo">Registrar Reserva</h1>
+    <form method="post" class="formulario">
         {% csrf_token %}
-        <div>
-          <label>Fecha Reserva:</label>
-          <input type="date" name="fecha_reserva">
+        <div class="contenedor-campos">
+            <div class="campo-formulario">
+                <label>Fecha Reserva:</label>
+                <input type="date" name="fecha_reserva">
 
-          <label>Cliente:</label>
-          <select name="clientes">
-
-                {% for cliente in clientes %}
-                     {% if cliente.activo == True %}
-                         <option value="{{ cliente.id }}">
-                             {{ cliente.nombre }} {{ cliente.apellido }}
-                         </option>
-                     {% endif %}
-                 {% endfor %}
-             </select>
-
-          <label>Responsable:</label>
-          <select name="responsables">
-                {% for coordinador in responsables %}
-                     {% if coordinador.activo == True %}
-                         <option value="{{ coordinador.id }}">
-                             {{ coordinador.nombre }} {{ coordinador.apellido }}
-                         </option>
-                     {% endif %}
-                 {% endfor %}
-             </select>
-
-          <label>Empleado:</label>
-          <select name="empleados">
-                {% for empleado in empleados %}
-                     {% if empleado.activo == True %}
- 
-                         <option value="{{ empleado.id }}">
-                             {{ empleado.nombre }} {{ empleado.apellido }}
-                         </option>
-                     {% endif %}
-                 {% endfor %}
-             </select>
-
-          <label>Servicio:</label>
-          <select name="servicios">
-
-                {% for servicio in servicios %}
-                     {% if servicio.activo == True %}
-                         <option value="{{ servicio.id }}">
-                             {{ servicio.nombre }}
-                         </option>
-                     {% endif %}
- 
-                 {% endfor %}
- 
-             </select>
+            </div>
+            <div class="campo-formulario">
+                <label>Cliente:</label>
+                <select name="clientes">
+                        {% for cliente in clientes %}
+                            {% if cliente.activo == True %}
+                                <option value="{{ cliente.id }}">
+                                    {{ cliente.nombre }} {{ cliente.apellido }}
+                                </option>
+                            {% endif %}
+                        {% endfor %}
+                    </select>
+            </div>
+            <div class="campo-formulario">
+                <label>Responsable:</label>
+                <select name="responsables">
+                    {% for coordinador in responsables %}
+                        {% if coordinador.activo == True %}
+                            <option value="{{ coordinador.id }}">
+                                {{ coordinador.nombre }} {{ coordinador.apellido }}
+                            </option>
+                        {% endif %}
+                    {% endfor %}
+                </select>
+            </div>
           
-          <label>Precio:</label>
-          <input type="number" step="any" name="precio">
-          <div>
-            <input type="submit" value="Registrar">
-          </div>
+            <div class="campo-formulario">
+                <label>Empleado:</label>
+                <select name="empleados">
+                    {% for empleado in empleados %}
+                        {% if empleado.activo == True %}
+    
+                            <option value="{{ empleado.id }}">
+                                {{ empleado.nombre }} {{ empleado.apellido }}
+                            </option>
+                        {% endif %}
+                    {% endfor %}
+                </select>
+            </div>
+            <div class="campo-formulario">
+                <label>Servicio:</label>
+                <select name="servicios">
+      
+                      {% for servicio in servicios %}
+                           {% if servicio.activo == True %}
+                               <option value="{{ servicio.id }}">
+                                   {{ servicio.nombre }}
+                               </option>
+                           {% endif %}
+       
+                       {% endfor %}
+       
+                   </select>      
+            </div>
+            <div class="campo-formulario">
+                <label>Precio:</label>
+                <input type="number" step="any" name="precio">
+            </div>
+            <input type="submit" value="Registrar" class="boton">
+            <a href="{% url 'listar_reservas' %}" class="volver-link">
+                Volver al listado
+            </a>
         </div>
 
     </form>
